finished CRUD endpoints
