# open-api-spec/api-doc.yaml
@@ -951,6 +951,182 @@ paths:
             statusCode: "200"
         requestParameters:
           integration.request.path.resourceId: method.request.path.resourceId
+  /team:
+    post:
+      operationId: TeamController_create
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateTeamDto"
+      responses:
+        "201":
+          description: ""
+      x-amazon-apigateway-integration:
+        connectionId:
+          Ref: VpcLink
+        httpMethod: POST
+        type: http_proxy
+        passthroughBehavior: when_no_match
+        uri:
+          Fn::Sub: http://${LoadBalancerDnsName}:${AppPort}/team
+        connectionType: VPC_LINK
+        responses:
+          default:
+            statusCode: "200"
+    get:
+      operationId: TeamController_findAll
+      parameters: []
+      responses:
+        "200":
+          description: ""
+      x-amazon-apigateway-integration:
+        connectionId:
+          Ref: VpcLink
+        httpMethod: GET
+        type: http_proxy
+        passthroughBehavior: when_no_match
+        uri:
+          Fn::Sub: http://${LoadBalancerDnsName}:${AppPort}/team
+        connectionType: VPC_LINK
+        responses:
+          default:
+            statusCode: "200"
+  "/team/{resourceId}":
+    get:
+      operationId: TeamController_findOne
+      parameters:
+        - name: resourceId
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      x-amazon-apigateway-integration:
+        connectionId:
+          Ref: VpcLink
+        httpMethod: GET
+        type: http_proxy
+        passthroughBehavior: when_no_match
+        uri:
+          Fn::Sub: http://${LoadBalancerDnsName}:${AppPort}/team/{resourceId}
+        connectionType: VPC_LINK
+        responses:
+          default:
+            statusCode: "200"
+        requestParameters:
+          integration.request.path.resourceId: method.request.path.resourceId
+    put:
+      operationId: TeamController_update
+      parameters:
+        - name: resourceId
+          required: true
+          in: path
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UpdateTeamDto"
+      responses:
+        "200":
+          description: ""
+      x-amazon-apigateway-integration:
+        connectionId:
+          Ref: VpcLink
+        httpMethod: PUT
+        type: http_proxy
+        passthroughBehavior: when_no_match
+        uri:
+          Fn::Sub: http://${LoadBalancerDnsName}:${AppPort}/team/{resourceId}
+        connectionType: VPC_LINK
+        responses:
+          default:
+            statusCode: "200"
+        requestParameters:
+          integration.request.path.resourceId: method.request.path.resourceId
+    delete:
+      operationId: TeamController_remove
+      parameters:
+        - name: resourceId
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      x-amazon-apigateway-integration:
+        connectionId:
+          Ref: VpcLink
+        httpMethod: DELETE
+        type: http_proxy
+        passthroughBehavior: when_no_match
+        uri:
+          Fn::Sub: http://${LoadBalancerDnsName}:${AppPort}/team/{resourceId}
+        connectionType: VPC_LINK
+        responses:
+          default:
+            statusCode: "200"
+        requestParameters:
+          integration.request.path.resourceId: method.request.path.resourceId
+  "/team/{resourceId}/cover":
+    post:
+      operationId: TeamController_addCover
+      parameters:
+        - name: resourceId
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        "201":
+          description: ""
+      x-amazon-apigateway-integration:
+        connectionId:
+          Ref: VpcLink
+        httpMethod: POST
+        type: http_proxy
+        passthroughBehavior: when_no_match
+        uri:
+          Fn::Sub: http://${LoadBalancerDnsName}:${AppPort}/team/{resourceId}/cover
+        connectionType: VPC_LINK
+        responses:
+          default:
+            statusCode: "200"
+        requestParameters:
+          integration.request.path.resourceId: method.request.path.resourceId
+    delete:
+      operationId: TeamController_removeCover
+      parameters:
+        - name: resourceId
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      x-amazon-apigateway-integration:
+        connectionId:
+          Ref: VpcLink
+        httpMethod: DELETE
+        type: http_proxy
+        passthroughBehavior: when_no_match
+        uri:
+          Fn::Sub: http://${LoadBalancerDnsName}:${AppPort}/team/{resourceId}/cover
+        connectionType: VPC_LINK
+        responses:
+          default:
+            statusCode: "200"
+        requestParameters:
+          integration.request.path.resourceId: method.request.path.resourceId
   /health:
     get:
       operationId: AppController_healthCheck
@@ -1092,5 +1268,11 @@ components:
       type: object
       properties: {}
     UpdateTitleDto:
+      type: object
+      properties: {}
+    CreateTeamDto:
+      type: object
+      properties: {}
+    UpdateTeamDto:
       type: object
       properties: {}
