# src/api/team/dto/create-team.dto.ts
@@ -1,0 +1,22 @@
+import { IsOptional, IsString } from 'class-validator';
+
+export class CreateTeamDto {
+  @IsString()
+  name: string;
+
+  @IsString()
+  @IsOptional()
+  description?: string;
+
+  @IsString()
+  @IsOptional()
+  website?: string;
+
+  @IsString()
+  @IsOptional()
+  telegram?: string;
+
+  @IsString()
+  @IsOptional()
+  discord?: string;
+}
