# src/api/team/dto/update-team.dto.ts
@@ -1,0 +1,23 @@
+import { IsOptional, IsString } from 'class-validator';
+
+export class UpdateTeamDto {
+  @IsString()
+  @IsOptional()
+  name?: string;
+
+  @IsString()
+  @IsOptional()
+  description?: string;
+
+  @IsString()
+  @IsOptional()
+  website?: string;
+
+  @IsString()
+  @IsOptional()
+  telegram?: string;
+
+  @IsString()
+  @IsOptional()
+  discord?: string;
+}
